--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ ta>=0.11.0
 
 # 数据下载
 yfinance>=0.2.28
+ib_insync==0.9.86
 
 # 数据存储
 pyarrow>=12.0.0
@@ -37,6 +38,10 @@ pyyaml>=6.0
 
 # 进度条
 tqdm>=4.65.0
+
+# 异步和事件处理
+nest-asyncio==1.6.0
+eventkit==1.0.3
 
 # 日志
 colorlog>=6.7.0
