--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,6 @@ scipy>=1.10.0
 ta>=0.11.0
 
 # 数据下载
-yfinance>=0.2.28
 ib_insync==0.9.86
 
 # 数据存储
@@ -32,6 +31,7 @@ plotly>=5.14.0
 
 # 机器学习
 scikit-learn>=1.3.0
+shap>=0.42.0
 
 # 配置文件
 pyyaml>=6.0
